# sea-cut

./: CMakeLists.txt  LICENSE  Readme.md  config.sh  llvm_config.sh  replacements.md  sea-cut.cpp
tests/: CMakeLists.txt  lit.cfg  simple_example.cpp  test.cpp
